--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 body {
-  background-color: #f7f7f7;
+  background-color: #f5f5f5;
 }
 
 .App {
-  text-align: center;
+  margin: 0 auto;
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100vh;
 }
