--- a/src/components/Toast.css
+++ b/src/components/Toast.css
@@ -1,29 +1,33 @@
-.toast-container {
+.toaster {
   box-sizing: border-box;
   position: fixed;
-  top: 18px;
-  right: 24px;
+  top: 12px;
+  right: 14px;
+  z-index: 1024;
 }
 
 .toast {
+  text-align: center;
   width: 300px;
   margin-bottom: 15px;
-  box-shadow: 0px 4px 6px 0 rgba(0, 0, 0, 0.18);
+  box-shadow: 2px 4px 7px 0 rgba(0, 0, 0, 0.18);
   border-radius: 4px;
   position: relative;
   display: flex;
   flex-direction: row;
   overflow: hidden;
+  font-size: 14px;
+  min-height: 60px;
 }
 
 .toast-fade-in {
   opacity: 1;
-  transition: opacity 0.5s;
+  transition: opacity 0.8s;
 }
 
 .toast-fade-out {
   opacity: 0;
-  transition: opacity 0.5s;
+  transition: opacity 0.8s;
 }
 
 .close {
@@ -46,7 +50,7 @@
   content: ' ';
   height: 12px;
   width: 3px;
-  background-color: #777;
+  background-color: #555;
 }
 
 .close:before {
